Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,9 @@
 - task: PowerPlatformToolInstaller@0
   inputs:
     DefaultVersion: true
+- task: PowerPlatformToolInstaller@0
+  inputs:
+    DefaultVersion: true
 - task: CmdLine@2
   inputs:
     script: |
