--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,13 +4,13 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
-- master
+ master
 
 pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: Maven@3
+ task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
